api: add identity/endpoints api
This API returns the set of identities which are being used by endpoints for
the local instance of cilium, as opposed to all identities in the cluster.

Signed-off by: Ian Vernon <ian@cilium.io>
