# api/v1/server/restapi/policy/get_identity_endpoints_responses.go
@@ -1,0 +1,171 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package policy
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/cilium/cilium/api/v1/models"
+)
+
+// GetIdentityEndpointsOKCode is the HTTP code returned for type GetIdentityEndpointsOK
+const GetIdentityEndpointsOKCode int = 200
+
+/*GetIdentityEndpointsOK Success
+
+swagger:response getIdentityEndpointsOK
+*/
+type GetIdentityEndpointsOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload []*models.IdentityEndpoints `json:"body,omitempty"`
+}
+
+// NewGetIdentityEndpointsOK creates GetIdentityEndpointsOK with default headers values
+func NewGetIdentityEndpointsOK() *GetIdentityEndpointsOK {
+
+	return &GetIdentityEndpointsOK{}
+}
+
+// WithPayload adds the payload to the get identity endpoints o k response
+func (o *GetIdentityEndpointsOK) WithPayload(payload []*models.IdentityEndpoints) *GetIdentityEndpointsOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get identity endpoints o k response
+func (o *GetIdentityEndpointsOK) SetPayload(payload []*models.IdentityEndpoints) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetIdentityEndpointsOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		payload = make([]*models.IdentityEndpoints, 0, 50)
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
+
+// GetIdentityEndpointsNotFoundCode is the HTTP code returned for type GetIdentityEndpointsNotFound
+const GetIdentityEndpointsNotFoundCode int = 404
+
+/*GetIdentityEndpointsNotFound Identities with provided parameters not found
+
+swagger:response getIdentityEndpointsNotFound
+*/
+type GetIdentityEndpointsNotFound struct {
+}
+
+// NewGetIdentityEndpointsNotFound creates GetIdentityEndpointsNotFound with default headers values
+func NewGetIdentityEndpointsNotFound() *GetIdentityEndpointsNotFound {
+
+	return &GetIdentityEndpointsNotFound{}
+}
+
+// WriteResponse to the client
+func (o *GetIdentityEndpointsNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(404)
+}
+
+// GetIdentityEndpointsUnreachableCode is the HTTP code returned for type GetIdentityEndpointsUnreachable
+const GetIdentityEndpointsUnreachableCode int = 520
+
+/*GetIdentityEndpointsUnreachable Identity storage unreachable. Likely a network problem.
+
+swagger:response getIdentityEndpointsUnreachable
+*/
+type GetIdentityEndpointsUnreachable struct {
+
+	/*
+	  In: Body
+	*/
+	Payload models.Error `json:"body,omitempty"`
+}
+
+// NewGetIdentityEndpointsUnreachable creates GetIdentityEndpointsUnreachable with default headers values
+func NewGetIdentityEndpointsUnreachable() *GetIdentityEndpointsUnreachable {
+
+	return &GetIdentityEndpointsUnreachable{}
+}
+
+// WithPayload adds the payload to the get identity endpoints unreachable response
+func (o *GetIdentityEndpointsUnreachable) WithPayload(payload models.Error) *GetIdentityEndpointsUnreachable {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get identity endpoints unreachable response
+func (o *GetIdentityEndpointsUnreachable) SetPayload(payload models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetIdentityEndpointsUnreachable) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(520)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
+
+// GetIdentityEndpointsInvalidStorageFormatCode is the HTTP code returned for type GetIdentityEndpointsInvalidStorageFormat
+const GetIdentityEndpointsInvalidStorageFormatCode int = 521
+
+/*GetIdentityEndpointsInvalidStorageFormat Invalid identity format in storage
+
+swagger:response getIdentityEndpointsInvalidStorageFormat
+*/
+type GetIdentityEndpointsInvalidStorageFormat struct {
+
+	/*
+	  In: Body
+	*/
+	Payload models.Error `json:"body,omitempty"`
+}
+
+// NewGetIdentityEndpointsInvalidStorageFormat creates GetIdentityEndpointsInvalidStorageFormat with default headers values
+func NewGetIdentityEndpointsInvalidStorageFormat() *GetIdentityEndpointsInvalidStorageFormat {
+
+	return &GetIdentityEndpointsInvalidStorageFormat{}
+}
+
+// WithPayload adds the payload to the get identity endpoints invalid storage format response
+func (o *GetIdentityEndpointsInvalidStorageFormat) WithPayload(payload models.Error) *GetIdentityEndpointsInvalidStorageFormat {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get identity endpoints invalid storage format response
+func (o *GetIdentityEndpointsInvalidStorageFormat) SetPayload(payload models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetIdentityEndpointsInvalidStorageFormat) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(521)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
